--- a/.github/workflows/pyre.yml
+++ b/.github/workflows/pyre.yml
@@ -42,5 +42,5 @@ jobs:
         with:
           # To customize these inputs:
           # See https://github.com/facebook/pyre-action#inputs
-          repo-directory: './'
-          requirements-path: 'requirements.txt'
+          repo-directory: './backend'
+          requirements-path: 'backend/requirements.txt'
